# claude-code-on-agentcore

./: README.md
agentcore/: .mcp.json  Dockerfile  README.md  main.py  pyproject.toml
backend/: package-lock.json  package.json
backend/assets/claude-agent/: Dockerfile  Dockerfile.amd64  docker-compose.yaml
backend/assets/claude-agent/app/: .mcp.json  main.py  pyproject.toml
backend/assets/claude-agent/app/.claude/skills/pdf/: SKILL.md
backend/lib/: backend-stack.ts
frontend/: README.md  main.py  pyproject.toml
