[project]
name = "claude-agent"
version = "0.1.0"
description = "claude-agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-opentelemetry-distro>=0.14.1",
    "bedrock-agentcore>=1.1.1",
    "claude-agent-sdk>=0.1.18",
    "defusedxml>=0.7.1",
    "lxml>=6.0.2",
    "markitdown>=0.1.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.8",
    "pillow>=12.0.0",
    "pypdf>=6.5.0",
    "pytesseract>=0.3.13",
    "python-pptx>=1.0.2",
    "reportlab>=4.4.7",
]
